# zora

./: .gitignore  .style.yapf  BETA_1.1_TESTING_PLAN.md  Dockerfile  Procfile  README.md  dev.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  rom_config.yaml  test_major_item_randomizer.py  version.py  zora.icns
cli/: cli.py
common/: constants.py
flags/: __init__.py  categories.py  definitions.py  flags.py  flags.yaml  flags_full.py  flags_generated.py  registry.py  validate_flags.py
ips/: auto_show_letter.ips  fast_fill.ips  flute_kills_pols.ips  four_potion_inventory.ips  full_health.ips
logic/: assignment_solver.py  bait_blocker.py  cave.py  constants.py  data_table.py  flags.py  hint_writer.py  hints.py  hints_test.py  inventory.py  item_randomizer.py  items.py  location.py  overworld_randomizer.py  patch.py  randomized_backtracking_solver.py  randomizer.py  randomizer_constants.py  rom_data_specs.py  rom_reader.py  room.py  text_data_table.py  text_randomizer.py  validator.py
macos/: macos.py  zora.spec
rng/: DETERMINISM.md  __init__.py  random_number_generator.py
rom/: __init__.py  cave.py  rom_config.py  rom_data.py  rom_interface.py  rom_state.py  room.py  test_rom_builder.py
static/: app.js  index.html  style.css
tests/: conftest.py  extract_test_data.py  fakes.py  hints_test.py  run_major_item_randomizer.py  test_abc_solver_comparison.py  test_api.py  test_assignment_solver.py  test_behavior_patches.py  test_cave_randomizer.py  test_change_dungeon_enemy_groups.py  test_char_encoding.py  test_debug_shuffle.py  test_determinism.py  test_determinism_comprehensive.py  test_determinism_quick.py  test_dungeon.py  test_dungeon_item_shuffler.py  test_dungeon_randomizer.py  test_dungeon_room_shuffle.py  test_dungeon_shapes.py  test_enemy_pool_integrity.py  test_entrance_shuffle.py  test_flags.py  test_flags_sync.py  test_hash_code.py  test_hint_limit_overflow.py  test_hint_randomizer.py  test_hint_safeguard.py  test_invariants.py  test_item_position_fixup.py  test_item_randomizer.py  test_items.py  test_logging.py  test_major_item_randomizer.py  test_major_item_randomizer_2.py  test_maze_directions.py  test_minor_item_randomizer.py  test_mutations.py  test_narrow_stair_east_wall.py  (+29 more)
tools/: bench_flagset.py  bench_gen.py  bench_shapes.py  bench_shapes_combos.py  cli.py  dev.py  (+4 more)
(+141 files in other folders)
